2010-05-20  Alan McGovern  <amcgovern@novell.com>

	* StandardCollectionView.cs: You can't remove an item if we're
	  in AddNew mode. Throw exceptions in Remove/RemoveAt if we're
	  in edit/add mode.

2010-05-20  Alan McGovern  <amcgovern@novell.com>

	* StandardCollectionView.cs: Add in some more error checking.

2010-05-20  Alan McGovern  <amcgovern@novell.com>

	* StandardCollectionView.cs: We can only auto-create items if
	  there's a public parameterless constructor.

2010-05-20  Alan McGovern  <amcgovern@novell.com>

	* StandardCollectionView.cs: If CanRemove is false, throw an
	  InvalidOperationException if we try to remove.l

2010-05-20  Alan McGovern  <amcgovern@novell.com>

	* StandardCollectionView.cs: If we're sorting or grouping the
	  actual indices of the elements are different to those in the
	  source collection. When raising the INCC event we need to
	  create new event args with the correct indices. We also need
	  to mangle "Replace" events into a Remove and Add event as a
	  replace in the source collection could result in an item
	  being removed at index 4 and another one being added at
	  index 10 in the actual collection. Very sneaky!

2010-05-20  Alan McGovern  <amcgovern@novell.com>

	* StandardCollectionViewGroup.cs: An easy one this time,
	  remove empty groups from the tree.

2010-05-20  Alan McGovern  <amcgovern@novell.com>

	* StandardCollectionView.cs: A simple "resort the collection
	  after editing" isn't good enough for 232. The same logic as
	  for CommitNew is required - we need to binary search the
	  list and re-insert the item in the correct place iif it
	  needs to be moved.

2010-05-19  Alan McGovern  <amcgovern@novell.com>

	* StandardCollectionView.cs: We need to invoke the
	  IEditableObject interface when adding/committing/cancelling
	  a new item.

2010-05-19  Alan McGovern  <amcgovern@novell.com>

	* StandardCollectionView.cs: Handle the case where we edit an
	  item so that it gets filtered out.
